# arrow_cli

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SKILL.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
src/: handler.rs  helper.rs  main.rs  output.rs  session.rs
