[package]
authors = ["sundy-li <sundyli@apache.org>>"]
categories = ["command-line-utilities"]
description = "Replace with description"
documentation = "https://docs.rs/arrow_cli"
repository = "https://github.com/sundy-li/arrow_cli"
edition = "2021"
license = "Apache-2.0"
name = "arrow_cli"
version = "0.1.3"



[dependencies]
shlex = "1.1.0"
atty = "0.2"
rustyline = "11.0.0"
arrow-cast = { version = "51", features = ["prettyprint"] }
arrow-flight = { version = "51", features = ["flight-sql-experimental"] }
arrow = { version = "51", features = ["ipc_compression"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1.26", features = [
	"macros",
	"rt",
	"rt-multi-thread",
	"sync",
	"parking_lot",
] }

tonic = { version = "0.11", default-features = false, features = [
	"transport",
	"codegen",
	"tls",
	"prost",
] }
clap = { version = "4.1.0", features = ["derive"] }
