[package]
authors = ["sundy-li <sundyli@apache.org>>"]
categories = ["command-line-utilities"]
description = "Replace with description"
documentation = "https://docs.rs/arrow_cli"
repository = "https://github.com/sundy-li/arrow_cli"
edition = "2024"
license = "Apache-2.0"
name = "arrow_cli"
version = "0.2.4"


[dependencies]
atty = "0.2"
rustyline = "15"
arrow-cast = { version = "55", features = ["prettyprint"] }
arrow-flight = { version = "55", features = ["flight-sql-experimental"] }
arrow = { version = "55", features = ["ipc_compression"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = [
	"macros",
	"rt",
	"rt-multi-thread",
	"sync",
	"parking_lot",
] }

tonic = { version = "0.12", default-features = false, features = [
	"transport",
	"codegen",
	"tls",
	"prost",
] }
clap = { version = "4.5", features = ["derive"] }
